--- a/chatbot-frontend/src/app/components/chat/chat.component.html
+++ b/chatbot-frontend/src/app/components/chat/chat.component.html
@@ -1,12 +1,25 @@
 <div class="container">
-  <h1>Install Bootstrap 4 in Angular 9 - ItSolutionStuff.com</h1>
+  <h1 style="color: blanchedalmond; font-style: oblique;">
+    Faculdades Logatti - Sistemas Distribuidos
+  </h1>
 
-  <div class="card">
+  <div class="card" *ngIf="!enableChat">
+    <div class="card-body">
+      <div class="form-group">
+        <label for="name">Nome:</label>
+        <input type="text" [(ngModel)]="name" class="form-control" id="exampleInputEmail1" aria-describedby="name">
+        <small id="name" class="form-text text-muted">Informe o seu nome.</small>
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="enterName()" >Entrar</button>
+    </div>
+  </div>
+
+  <div class="card" *ngIf="enableChat" >
     <div class="card-header">
-      Featured
+      Chatbot Vendas
     </div>
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
+      <h5 class="card-title">Bem vindo, fale com nossa atendente.</h5>
       <div class="container" style="margin-top: 15px;">
         <div class="col-sm">
           <div class="form-group">
@@ -21,16 +34,16 @@
           </div>
           <br />
           <div class="form-group">
-            <label for="mensagem">Mensagem</label>
+            <label for="message">Mensagem</label>
             <textarea
               (change)="doTextareaValueChange($event)"
               class="form-control"
-              name="mensagem"
+              name="message"
               maxlength="500"
               cols="120"
               rows="3"
               type="text"
-              id="mensagem"
+              id="message"
               style="resize: none;"
             ></textarea>
           </div>
