--- a/chatbot-frontend/src/app/components/chat/chat.component.html
+++ b/chatbot-frontend/src/app/components/chat/chat.component.html
@@ -7,19 +7,29 @@
     <div class="card-body">
       <div class="form-group">
         <label for="name">Nome:</label>
-        <input type="text" [(ngModel)]="name" class="form-control" id="exampleInputEmail1" aria-describedby="name">
-        <small id="name" class="form-text text-muted">Informe o seu nome.</small>
+        <input
+          type="text"
+          [(ngModel)]="name"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="name"
+        />
+        <small id="name" class="form-text text-muted"
+          >Informe o seu nome.</small
+        >
       </div>
-      <button type="submit" class="btn btn-primary" (click)="enterName()" >Entrar</button>
+      <button type="submit" class="btn btn-primary" (click)="enterName()">
+        Entrar
+      </button>
     </div>
   </div>
 
-  <div class="card" *ngIf="enableChat" >
+  <div class="card" *ngIf="enableChat">
     <div class="card-header">
       Chatbot Vendas
     </div>
     <div class="card-body">
-      <h5 class="card-title">Bem vindo, fale com nossa atendente.</h5>
+      <h5 class="card-title">Bem vindo {{ name }}, fale com nossa atendente.</h5>
       <div class="container" style="margin-top: 15px;">
         <div class="col-sm">
           <div class="form-group">
@@ -29,6 +39,7 @@
               data-target="#navbar-example2"
               data-offset="0"
               id="chat"
+              #chat
               class="scrollspy-chat"
             ></div>
           </div>
@@ -45,21 +56,19 @@
               type="text"
               id="message"
               style="resize: none;"
+              #message
             ></textarea>
           </div>
           <button
             type="button"
             class="btn btn-primary"
-            id="enviar"
-            onclick="enviarMensagem()"
+            id="buttonSend"
+            #buttonSend
+            (click)="sendMessage()"
           >
             Enviar</button
           >&nbsp;
-          <button
-            type="button"
-            class="btn btn-danger"
-            onclick="window.location.reload()"
-          >
+          <button type="button" class="btn btn-danger" (click)="reloadPage()">
             Sair
           </button>
         </div>
