--- a/chatbot-frontend/src/app/components/chat/chat.component.html
+++ b/chatbot-frontend/src/app/components/chat/chat.component.html
@@ -18,7 +18,12 @@
           >Informe o seu nome.</small
         >
       </div>
-      <button type="submit" class="btn btn-primary" (click)="enterName()">
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!name"
+        (click)="enterName()"
+      >
         Entrar
       </button>
     </div>
@@ -29,7 +34,9 @@
       Chatbot Vendas
     </div>
     <div class="card-body">
-      <h5 class="card-title">Bem vindo {{ name }}, fale com nossa atendente.</h5>
+      <h5 class="card-title">
+        Bem vindo {{ name }}, fale com o nosso atendente.
+      </h5>
       <div class="container" style="margin-top: 15px;">
         <div class="col-sm">
           <div class="form-group">
@@ -39,7 +46,7 @@
               data-target="#navbar-example2"
               data-offset="0"
               id="chat"
-              #chat
+              #chatRef
               class="scrollspy-chat"
             ></div>
           </div>
@@ -56,7 +63,7 @@
               type="text"
               id="message"
               style="resize: none;"
-              #message
+              #messageArea
             ></textarea>
           </div>
           <button
